--- a/src/connectfour.tex
+++ b/src/connectfour.tex
@@ -439,8 +439,8 @@ function printInfoText(text) {
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
-                    \TextField[name=info, bordercolor=, backgroundcolor=,
-                        width=\linewidth, readonly]{}
+                    \TextField[name=info, width=\linewidth,
+                        bordercolor=, backgroundcolor=, readonly]{}
                 \end{tcolorbox}\\
                 \begin{tcolorbox}%
                     \centering%
