--- a/src/match-three.tex
+++ b/src/match-three.tex
@@ -1160,7 +1160,8 @@ function printInfoText(text) {
             \columnbreak
 
             \begin{tcolorbox}
-                \TextField[name=info, width=2\linewidth, bordercolor=, backgroundcolor=]{\strut}
+                \TextField[name=info, width=2\linewidth,
+                    bordercolor=, backgroundcolor=, readonly]{\strut}
             \end{tcolorbox}
         \end{multicols}
 
