--- a/src/solonoble.tex
+++ b/src/solonoble.tex
@@ -1123,8 +1123,8 @@ function printInfoText(text) {
             }
             &
             \begin{tcolorbox}
-                \TextField[name=info, width=2\linewidth, bordercolor=, backgroundcolor=, readonly]
-                    {\strut}
+                \TextField[name=info, width=2\linewidth,
+                    bordercolor=, backgroundcolor=, readonly]{\strut}
             \end{tcolorbox}
             \\[-0.5cm]
             \PushButton[name=import, bordercolor=, backgroundcolor=, borderwidth=0]{
