--- a/src/memory.tex
+++ b/src/memory.tex
@@ -438,7 +438,7 @@ function printInfoText(text) {
             \end{tabularx}
         \end{center}
 
-        \TextField[name=pointtable, bordercolor=black, readonly=true, multiline=true]{}
+        \TextField[name=pointtable, bordercolor=black, readonly, multiline=true]{}
         \TextField[name=tooltiptxt, bordercolor=, backgroundcolor=gray, readonly, hidden]{}
 
     \end{Form}
