--- a/src/tetris.tex
+++ b/src/tetris.tex
@@ -670,8 +670,8 @@ function draw(x, y) {
                     \end{tcolorbox}
                 } &
                 \centering
-                \TextField[name=points, width=0.1\textwidth, value=0,
-                    bordercolor=white, readonly=true]{Points:} &
+                \TextField[name=points, width=0.25\linewidth, value=0,
+                    bordercolor=, align=2, readonly]{Points:}&
                 \PushButton[name=pause, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
@@ -687,7 +687,7 @@ function draw(x, y) {
                     \centering
                     % bordercolor={0.650 .790 .94}
                     \TextField[name=output1, width=0.3\textwidth, height=1.5cm,
-                        bordercolor=white, readonly=true]{}
+                        bordercolor=black, readonly]{}
                     %\begin{tcolorbox}
                     %\end{tcolorbox}
                 &
